fix overflow issue on ie

--- a/src/scss/vue-sidebar-menu.scss
+++ b/src/scss/vue-sidebar-menu.scss
@@ -18,7 +18,8 @@
   > .vsm--list {
     width: 100%;
     height: 100%;
-    overflow: hidden auto;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
   
   .vsm--dropdown > .vsm--list {
